<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/imageView_selected"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/drawer_selected_item"
        android:layout_gravity="start"
        tools:srcCompat="@drawable/selected" />

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/drawer_item_icon"
        android:layout_marginStart="32dp"
        android:layout_gravity="center_vertical"
        tools:srcCompat="@drawable/explore" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_vertical"
        tools:text="@string/explore"/>

</LinearLayout>