<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="32dp">

    <ImageView
        android:id="@+id/imageView_userAvatar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/user_avatar"
        android:scaleType="centerCrop"
        tools:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imageView_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/textView_userName"
        app:layout_constraintEnd_toStartOf="@+id/imageView_arrow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_userAvatar"
        app:layout_constraintTop_toTopOf="@+id/imageView_userAvatar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        tools:text="@string/tony_roshdy"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_arrow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView_welcome"
        app:layout_constraintTop_toBottomOf="@+id/imageView_welcome" />

    <ImageView
        android:id="@+id/imageView_arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_userAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_userAvatar"
        app:srcCompat="@drawable/arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>